# Flask_home_work

./: README.md  app.py  pyproject.toml
static/css/: style.css
templates/: about.html  base.html  catalog.html  contact.html  index.html
